Draw static images

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 authors = ["Daniel Slocombe <ds4314@ic.ac.uk>"]
 
 [dependencies]
+piston = "0.31.3"
+piston2d-graphics = "0.21.1"
+pistoncore-glutin_window = "0.35.0"
+piston2d-opengl_graphics = { git = "https://github.com/danslocombe/opengl_graphics" }
+rand = "0.3"
