--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ piston2d-graphics = "0.21.1"
 pistoncore-glutin_window = "0.35.0"
 piston2d-opengl_graphics = { git = "https://github.com/danslocombe/opengl_graphics" }
 rand = "0.3"
+cgmath = "0.12"
